hphp/hack/test/typecheck/nonnull/nonnull_summand.php
<?hh // strict

function incr(nonnull $x): void {
  $_ = $x + 1;
}
